--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Campo Minato</title>
 </head>
 <body>
+    <h1>Campo Minato</h1>
+    <h2 id="array_bombe"></h2>
+    <h2 id="array_giocatore"></h2>
+    <h2 id="numero_giocate"></h2>
 
-    <h1 id="array_bombe"></h1>
-    <h1 id="array_giocatore"></h1>
-    <h1 id="numero_giocate"></h1>
+    <div id="campo" class="clearfix">
 
-    
     <script src="js/main.js"></script>
 </body>
 </html>
